--- a/index.css
+++ b/index.css
@@ -92,3 +92,17 @@ body{
     padding: 15px 30px !important;
     border-radius: 4px !important;
 }
+
+
+.elementor-heading-title {
+    font-size: 40px;
+    padding: -1px -1px -1px -1px;
+}
+
+.sub-title {
+    font-size: 40px !important;
+}
+
+.sub-title-1 {
+    font-size: 3.75rem !important;
+}
