--- a/index.css
+++ b/index.css
@@ -106,3 +106,12 @@ body{
 .sub-title-1 {
     font-size: 3.75rem !important;
 }
+
+.control-prev-icon {
+    display: inline-block;
+    width: 3rem !important;
+    height: 3rem !important;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 100% 100%;
+}
