update all pages

--- a/index.css
+++ b/index.css
@@ -129,6 +129,15 @@ body{
     line-height: 1.5em;
 }
 
+.text-3{
+    color: #252525;
+    font-size: 22px;
+    line-height: 40px;
+}
+.text-4{
+    font-size: 4.375rem !important;
+}
+
 a{
     text-decoration: none !important;
 }
